# qslib

./: .coveragerc  .cursorrules  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  Cargo-rs.toml  Cargo.toml  README.md  example-conf.toml  pyproject.toml  qslib_rs.pyi  setup.cfg  setup.py  test.eds  todo.md  tox.ini
.github/workflows/: black.yml  codeql-analysis.yml  maturin.yaml  mypy.yml  python-publish.yml  python-real-tests.yml  python-tests.yml
.reuse/: dep5
benches/: message_parsing.rs  msg_recv.rs
docs/: CLA-individual.md  LICENSE.txt  Makefile  commandline.rst  conf.py  experiments.rst  high-level.rst  index.md  index.rst  install_wheel_from_gha.py  license.rst  machines.rst  monitor.rst  requirements.txt  setup.rst  tutorial.rst
docs/_static/: custom.css
examples/: qslib-example.ipynb  qslib-example.ipynb.license
python/qslib/: __init__.py  _qslib.pyi  _util.py  cli.py  data.py  experiment.py  machine.py  monitor.py  pandas_processors.py  plate_setup.py  polars_data.py  processors.py  protocol.py  scpi_commands.py  version.py
qs-monitor/: Cargo.toml  example-conf.toml
qs-monitor/src/: main.rs  matrix.rs
qslib-rs-stubs/qslib_rs/: __init__.pyi
src/: com.rs  com_test.rs  commands.rs  data.rs  lib-rs.rs  lib.rs  main.rs  matrix.rs  message_log.rs  message_receiver.rs  parser.rs  plate_setup.rs  protocol.rs  python.rs
src/qslib/: __init__.py  _analysis_protocol_text.py  _util.py  base.py  cli.py  common.py  data.py  data_collector.py  experiment.py  machine.py  monitor.py  monitor_cli.py  normalization.py  parser.py  plate_setup.py  plots.py  processors.py  protocol.py  qs_is_protocol.py  qsconnection.py  qsconnection_async.py  rawquant_compat.py  scpi_commands.py  scpi_proto_commands.py  skeleton.py  tcprotocol.py  util.py  version.py
tests/: com_test.rs  conftest.py  mid-run.eds  simulator_integration.rs  test.eds  test.eds.license  test_accesslevel.py  test_altair_plotting.py  test_basic.py  test_cli.py  test_experiment.py  test_experiment_file.py  test_experiment_run.py  test_fakeserver.py  test_is_protocol.py  test_plate_setup.py  test_protocol.py  test_real.py  test_scpicommand.py  test_skeleton.py  test_util_fns.py  test_v2_eds.py  v2_test.eds
