[package]
name = "qslib-python"
version = "0.14.0-rc3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qslib_python"
crate-type = ["cdylib"]

[dependencies]
qslib = { version = "0.14.0-pre3", features = ["python"] }
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py310"] }
tokio = { version = "1.42.0", features = ["net", "sync", "rt", "io-util", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

[features]
simd = ["qslib/simd"]

[dev-dependencies]
env_logger = "0.11.6"
criterion = { version = "0.5", features = ["html_reports"] }

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

# [[bench]]
# name = "msg_recv"
# harness = false

# [[bench]]
# name = "message_parsing"
# harness = false
