[workspace]
members = [".", "qs-monitor"]
resolver = "2"

[workspace.package]
version = "0.14.0"

[package]
name = "qslib"
version.workspace = true
edition = "2021"
description = "QSlib QuantStudio qPCR machine library"
license = "EUPL-1.2"
authors = ["Constantine Evans <qslib@mb.costi.net>"]
homepage = "https://github.com/cgevans/qslib-rs"
repository = "https://github.com/cgevans/qslib-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qslib"
crate-type = ["cdylib", "rlib"]

[dependencies]
dashmap = "6.1"
enum_dispatch = "0.3.13"
futures = "0.3.31"
indexmap = "2.7"
log = "0.4.25"
pyo3 = { version = "0.26", optional = true, features = ["extension-module", "abi3-py310", "anyhow", "multiple-pymethods"] }
quick-xml = { version = "0.38", features = ["overlapped-lists", "serialize"] }
regex = "1.11.1"
rustls = { version = "0.23.20", features = ["ring"], default-features = false }
rustls-pki-types = "1.10.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["net", "sync", "rt", "rt-multi-thread", "io-util", "macros"] }
tokio-rustls = { version = "0.26.1", features = ["ring", "logging", "tls12"], default-features = false }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.12.1", features = ["v4"] }
winnow = "0.7"
zip = "2"
memchr = { version = "2.7", optional = true }
lazy_static = "1.5.0"
data-encoding = "2.7.0"
anyhow = "1.0.95"
bstr = "1.11.3"
tracing = "0.1.41"
polars = { version = "^0.52", features = ["lazy", "diagonal_concat", "timezones"] }
pyo3-polars = { version = "^0.25", optional = true }
once_cell = "1.21.3"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"
digest = { version = "0.10.7", default-features = false }
rustls-pemfile = "2.2.0"
webpki = { package = "rustls-webpki", version = "0.102" }

[features]
debug = ["winnow/debug"]
python = ["pyo3", "pyo3-polars"]
simd = ["dep:memchr", "winnow/simd"]
# default = ["python"]

[dev-dependencies]
env_logger = "0.11.6"
rcgen = "0.13.2"
rustls-pemfile = "2.2.0"
criterion = { version = "0.5", features = ["html_reports"] }
base64 = "0.21"
# default = ["python"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[[bench]]
name = "msg_recv"
harness = false

[[bench]]
name = "message_parsing"
harness = false

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

# [[bench]]
# name = "msg_recv"
# harness = false

# [[bench]]
# name = "message_parsing"
# harness = false
