[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "qslib"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["python"]

[tool.poetry]
packages = [
    { include = "qslib-rs-stubs", format = "sdist" }
]

[tool.poetry.package-data]
qslib_rs = ["py.typed", "*.pyi"]
